--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Tavolga";
+  src: url("./assets/fonts/Tavolga.ttf");
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("./assets/fonts/Gilroy-Regular.ttf") format("TrueType"),
+  url("./assets/fonts/Gilroy-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "GilroyMedium";
+  src: url("./assets/fonts/Gilroy-Medium.ttf") format("TrueType"),
+  url("./assets/fonts/Gilroy-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "GilroyBold";
+  src: url("./assets/fonts/Gilroy-Bold.ttf") format("TrueType"),
+  url("./assets/fonts/Gilroy-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "GilroyExtraBold";
+  src: url("./assets/fonts/Gilroy-ExtraBold.ttf") format("TrueType"),
+  url("./assets/fonts/Gilroy-ExtraBold.woff") format("woff");
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+body {
+  background-color: #eba8b1;
+  margin: 0;
+}
+
+.contacts__number {
+  font-size: 16px;
+  font-family: "GilroyBold", sans-serif;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
