--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,20 @@ body {
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
+
+.btn {
+  font-family: "GilroyBold", sans-serif;
+  color: rgb(255, 255, 255);
+  border: 0;
+  border-radius: 30px;
+  cursor: pointer;
+  background: -moz-linear-gradient( 90deg, rgb(113,8,30) 0%, rgb(215,72,92) 100%);
+  background: -webkit-linear-gradient( 90deg, rgb(113,8,30) 0%, rgb(215,72,92) 100%);
+  background: -ms-linear-gradient( 90deg, rgb(113,8,30) 0%, rgb(215,72,92) 100%);
+  background: linear-gradient(90deg, rgb(113,8,30) 0%, rgb(215,72,92) 100%);
+  transition: all .5s ease;
+}
+
+.btn:hover {
+  box-shadow: 0 5px 9px 1px rgba(130, 19, 40, 0.5);
+}
