--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   </div>
 </section>
 
-<section class="about" id="about">
+<section class="about" #about id="about">
   <div class="container about__container">
     <h2 class="title title_fz45 about__title">
       Мы печём для вас вкуснейшие макаруны уже более 10 лет
@@ -35,7 +35,7 @@
   </div>
 </section>
 
-<section class="catalog" #catalog>
+<section class="catalog" #catalog id="catalog">
   <div class="container catalog__container">
     <h2 class="title title_fz45 catalog__title">
       Выберите свой макарун
@@ -47,7 +47,7 @@
   </div>
 </section>
 
-<section class="order" #order>
+<section class="order" #order id="order">
   <div class="container order__container">
     <div class="order__image">
       <img src="../assets/images/order/big.png" alt="Макаруны" class="order__image-img">
