--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .main {
   overflow: hidden;
+  margin-top: 80px;
 }
 
 .presentation {
@@ -250,7 +251,7 @@
   position: fixed;
   bottom: 30px;
   right: 30px;
-  z-index: 10;
+  z-index: 4;
 }
 
 .gift-img {
@@ -274,22 +275,6 @@
 .gift__btn:hover {
   box-shadow: 0 0 12.6px 2.4px rgba(130, 19, 40, 0.5);
 }
-
-/*.gift__btn:after {*/
-/*  content: "0";*/
-/*  font-size: 20px;*/
-/*  line-height: 25px;*/
-/*  text-align: center;*/
-/*  position: absolute;*/
-/*  width: 25px;*/
-/*  height: 25px;*/
-/*  border: 2px solid rgb(63, 4, 17);*/
-/*  border-radius: 50%;*/
-/*  background: white;*/
-/*  top: 0;*/
-/*  right: 0;*/
-/*  z-index: 10;*/
-/*}*/
 
 .gift__btn-total {
   font-size: 20px;
