--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -49,6 +50,14 @@ body {
   font-family: "GilroyBold", sans-serif;
   color: rgb(255, 255, 255);
   text-decoration: none;
+}
+
+header-component {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+  background: #eba8b1;
+  top: 0;
 }
 
 .btn {
