--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,10 +5,10 @@
         <img src="../../../assets/images/logo.png" alt="macaroons логотип">
       </a>
     </div>
-    <nav class="menu" id="menu" [class.open]="isActiveMenu">
+    <nav class="menu" id="menu" #menu [class.open]="isActiveMenu">
       <div class="menu__close">
         <svg class="menu__close-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-             viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve" *ngIf="isActiveMenu" (click)="checkMenu()">
+             viewBox="0 0 492 492" style="enable-background:new 0 0 492 492;" xml:space="preserve" (click)="checkMenu()">
 						<g>
 							<g>
 							<path d="M300.188,246L484.14,62.04c5.06-5.064,7.852-11.82,7.86-19.024c0-7.208-2.792-13.972-7.86-19.028L468.02,7.872
